<resources>
    <string name="app_name">Proyectos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_me">Sobre mi</string>
    <string name="contact">Contacto</string>
    <string name="mis_trabajos">mis Trabajos</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="item_inicio">Inicio</string>
    <string name="item_cuenta">Mi Cuenta</string>
    <string name="item_categorias">Categorías</string>
    <string name="item_configuracion">Configuración</string>

    <string name="titulo_comidas_populares">Lo más pedido</string>

    <string name="titulo_tab_platillos">PLATILLOS</string>
    <string name="titulo_tab_bebidas">BEBIDAS</string>
    <string name="titulo_tab_postres">POSTRES</string>

    <string name="titulo_tab_perfil">PERFIL</string>
    <string name="titulo_tab_direcciones">DIRECCIONES</string>
    <string name="titulo_tab_tarjetas">TARJETAS</string>

    <string name="texto_no_tarjetas">No tienes ninguna tarjeta asociada</string>

    <string name="etiqueta_carrito">Carrito</string>

    <string name="texto_cambiar_contrasena">Cambia tu contraseña</string>
    <string name="etiqueta_contrasena">Contraseña</string>
    <string name="etiqueta_info_usuario">Información del usuario</string>
    <string name="error_invalid_password">Contraseña no valida</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Log Out</string>
    <string name="action_share_text">Share</string>
    <string name="input_placeholder_email">Email</string>
    <string name="input_placeholder_pass">Password</string>
    <string name="input_placeholder_pass_confirm">Confirm Password</string>
    <string name="input_placeholder_display_name">Display Name</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_title_hint">Post Title</string>
    <string name="post_desc_hint">Post Description</string>
    <string name="post_btn_text">Save Post</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notifications</string>
    <string name="bottom_account_text">Account</string>
    <string name="nav_home_text">Home</string>
    <string name="nav_notification_text">Notifications</string>
    <string name="nav_account_text">Account</string>
    <string name="search_hint">Search Posts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="comment_field_hint">Your Comment here...</string>
    <string name="comment_label_text">Comments:</string>
    <string name="login_btn_text">Login to Account</string>
    <string name="reg_btn_text">Create Account</string>
    <string name="login_reg_text">Don\'t have an account?</string>
    <string name="reg_login_text">Already have an account?</string>
    <string name="reg_brand_text">Create a new Account</string>
    <string name="app_promo">Your Travel Blog</string>
    <string name="title_activity_actividad_principal">ActividadPrincipal</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="titulo_actividad_configuracion">Configuracion</string>
    <string name="categoria_notificaciones">Notificaciones</string>

    <string name="titulo_preferencia">Frecuencia de notificaciones por correo</string>
    <string name="key_preferencia">lista_frecuencias</string>
    <string name="error_invalid_user_id">Correo invalido</string>
    <string name="error_invalid_user">Usuario Invalido</string>
    <string name="error_network">No tienes internet</string>
    <string name="cambiar_direccion">Cambiar direccion</string>
    <string name="etiqueta_direccion">Direccion</string>
    <string name="action_add">agregar</string>
    <string name="action_favorite">favorito</string>
    <string-array name="lista_frecuencia">
        <item>Un correo diario</item>
        <item>Un correo a la semana</item>
        <item>Un correo al mes</item>
        <item>No quiero recibir correos</item>
    </string-array>
    <string-array name="lista_valores_frecuencia">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>