<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dee4ee"
    android:orientation="vertical"
    android:padding="@dimen/espacio_norma_1">

    <TextView
        android:id="@+id/titulo_informacion_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/etiqueta_info_usuario"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="@dimen/espacio_norma_1"
            android:rowCount="2">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="@dimen/espacio_norma_2"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/texto_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="32dp"
                android:text="James Revelo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="@dimen/espacio_norma_2"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/texto_apellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="32dp"
                android:text="James Revelo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="@dimen/espacio_norma_2"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/texto_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="32dp"
                android:text="James Revelo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_chat" />



            <TextView
                android:id="@+id/texto_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="james@mail.com"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </GridLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titulo_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/espacio_norma_2"
        android:paddingTop="@dimen/espacio_norma_1"
        android:text="@string/etiqueta_contrasena"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/espacio_norma_1">

            <ImageView
                android:id="@+id/icono_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_chat" />

            <TextView
                android:id="@+id/texto_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/icono_password"
                android:text="@string/texto_cambiar_contrasena"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/icono_indicador_derecho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_chat" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/titulo_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/espacio_norma_1"
        android:paddingBottom="@dimen/espacio_norma_2"
        android:text="@string/etiqueta_direccion"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/icono_direccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_location_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_toStartOf="@+id/icono_editar_derecho"
                    android:layout_toLeftOf="@+id/icono_editar_derecho"
                    android:layout_toEndOf="@+id/icono_direccion"
                    android:layout_toRightOf="@+id/icono_direccion"
                    card_view:helperText="Direccion">

                    <TextView
                        android:id="@+id/texto_direccion_usuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/cambiar_direccion"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/icono_editar_derecho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_location_24dp"
                    card_view:tint="#0B0A0A" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>