<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@drawable/background"

        tools:context=".ui.fragment.LoginFragment">


    <RelativeLayout
     android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="325dp"
            android:layout_height="122dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/circular_grey_bordersolid"
                android:drawableLeft="@drawable/ic_chat"
                android:drawablePadding="@dimen/margin_16"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="@dimen/text_16" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/circular_grey_bordersolid"
                android:drawableLeft="@drawable/ic_chat"
                android:drawablePadding="@dimen/margin_16"
                android:hint="Password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="@dimen/text_16"
                tools:ignore="TouchTargetSizeCheck" />


        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="162dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/login_btn_text"
            android:textAllCaps="false"
            android:textColor="?android:attr/colorLongPressedHighlight"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_reg_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="11dp"
           android:onClick="onClick"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/login_reg_text"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/login_brand"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@+id/login_logo"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="false"
            android:layout_centerVertical="false"
            android:fontFamily="@font/lato"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="30sp" />

        <ProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
