<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/form_registro"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_brand"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/reg_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/circular_grey_bordersolid"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="@dimen/margin_16"
                android:hint="Name"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="@dimen/text_16" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_weight="2"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/reg_apellido_pat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circular_grey_bordersolid"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="@dimen/margin_16"
                    android:hint="Apellido paterno"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_16" />

                <EditText
                    android:id="@+id/reg_apellido_mat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circular_grey_bordersolid"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="@dimen/margin_8dp"
                    android:gravity="center"
                    android:hint="Apellido Materno"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_16" />

            </LinearLayout>

            <EditText
                android:id="@+id/telefonoRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/circular_grey_bordersolid"
                android:drawableLeft="@drawable/ic_call_24dp"
                android:drawablePadding="@dimen/margin_16"
                android:hint="Telefono"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="@dimen/text_16"


                />


            <EditText
                android:id="@+id/reg_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/circular_grey_bordersolid"
                android:drawableLeft="@drawable/ic_chat"
                android:drawablePadding="@dimen/margin_16"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="@dimen/text_16" />


            <EditText
                android:id="@+id/reg_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/circular_grey_bordersolid"
                android:drawableLeft="@drawable/ic_chat"
                android:drawablePadding="@dimen/margin_16"
                android:hint="Password"

                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="@dimen/text_16" />


        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_registrar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_registro"
        android:layout_centerHorizontal="true"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/reg_btn_text"
        android:textAllCaps="false"
        android:textColor="?android:attr/colorLongPressedHighlight"
        android:textSize="16sp" />

    <Button
        android:id="@+id/reg_login_btn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_registrar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/reg_login_text"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/reg_logo"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/reg_text"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/reg_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:fontFamily="@font/poppins"
        android:text="@string/reg_brand_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/reg_brand"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/reg_text"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:fontFamily="@font/lato"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="30sp" />

    <ProgressBar
        android:id="@+id/loading_reg"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>